--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.5",
     "@astrojs/react": "^4.3.1",
     "@tailwindcss/vite": "^4.1.13",
     "@types/react": "^19.1.13",
